<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_400_50"/>

        <com.example.vkcustomviewclock.ClockView
            android:layout_width="400dp"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_50_400"/>

        <com.example.vkcustomviewclock.ClockView
            android:layout_width="50dp"
            android:layout_height="400dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_70_70"/>

        <com.example.vkcustomviewclock.ClockView
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_140_140"/>

        <com.example.vkcustomviewclock.ClockView
            android:layout_width="140dp"
            android:layout_height="140dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_400_400"/>

        <com.example.vkcustomviewclock.ClockView
            android:layout_width="400dp"
            android:layout_height="400dp"/>
    </LinearLayout>
</ScrollView>